platform/data/kubernetes/apps/qdrant/headless-external-dns-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qdrant-headless
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
    external-dns.alpha.kubernetes.io/hostname: null
